crates/bitnet-kernels/tests/snapshots/snapshot_wave_15__simd_matmul_2x2.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_15.rs
expression: fmt6(&c)
---
[19.000000, 22.000000, 43.000000, 50.000000]
