crates/bitnet-kernels/tests/snapshots/snapshot_wave_15__simd_matmul_with_alpha_beta.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_15.rs
expression: fmt6(&c)
---
[9.000000, 11.000000, 13.000000, 15.000000]
