crates/bitnet-kernels/tests/snapshots/snapshot_wave_15__sliding_window_mask_4x4_window2.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_15.rs
expression: "format!(\"{display:?}\")"
---
["0", "-inf", "-inf", "-inf", "0", "0", "-inf", "-inf", "-inf", "0", "0", "-inf", "-inf", "-inf", "0", "0"]
