crates/bitnet-kernels/tests/snapshots/snapshot_wave_15__smooth_l1_loss_known.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_15.rs
expression: "format!(\"{loss:.6}\")"
---
0.125000
