crates/bitnet-kernels/tests/snapshots/snapshot_wave_15__softmax_config_basic_debug.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_15.rs
expression: cfg
---
SoftmaxConfig {
    n_cols: 8,
    n_rows: 2,
    threads_per_block: 8,
    temperature: 1.0,
    causal_mask: false,
    mode: Standard,
    in_place: false,
}
