crates/bitnet-kernels/tests/snapshots/snapshot_wave_15__softmax_config_with_causal_mask_debug.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_15.rs
expression: cfg
---
SoftmaxConfig {
    n_cols: 4,
    n_rows: 4,
    threads_per_block: 4,
    temperature: 1.0,
    causal_mask: true,
    mode: Standard,
    in_place: false,
}
