crates/bitnet-kernels/tests/snapshots/snapshot_wave_15__softmax_mode_all_variants_debug.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_15.rs
expression: variants
---
[
    Standard,
    LogSoftmax,
]
