crates/bitnet-kernels/tests/snapshots/snapshot_wave_15__split_even.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_15.rs
expression: "format!(\"{formatted:?}\")"
---
["[1.000000, 2.000000]", "[3.000000, 4.000000]", "[5.000000, 6.000000]"]
