crates/bitnet-kernels/tests/snapshots/snapshot_wave_15__stack_output_shape.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_15.rs
expression: shape
---
[
    2,
    3,
    4,
]
