crates/bitnet-kernels/tests/snapshots/snapshot_wave_15__stack_two_vectors.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_15.rs
expression: fmt6(&result)
---
[1.000000, 2.000000, 3.000000, 4.000000]
